--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ license = "MIT"
 python = "^3.6"
 wagtail = "^2.12.4"
 python-decouple = "^3.4"
+whitenoise = "^5.2.0"
+dj-database-url = "^0.5.0"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 
