--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-decouple = "^3.4"
 whitenoise = "^5.2.0"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.6"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
