--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ whitenoise = "^5.2.0"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.6"
 gunicorn = "^20.1.0"
+django-toolbelt = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 
